Fixed Content Alignment

--- a/style.css
+++ b/style.css
@@ -139,6 +139,7 @@ nav a:hover {
     background: #1e1e1e;
     border-radius: 10px;
     padding: 20px;
+    margin:auto;
     margin-top: 10%;
     width: 50%;
     box-shadow: 0px 4px 10px rgba(255, 255, 255, 0.1);
